--- a/integration-test/pom.xml
+++ b/integration-test/pom.xml
@@ -8,23 +8,32 @@
     </parent>
     <artifactId>integration-test</artifactId>
     <packaging>jar</packaging>
+    <properties>
+        <jersey.version>2.25.1</jersey.version>
+    </properties>
     <dependencies>
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-        </dependency>
-        <!-- May be handy to use -->
-<!--        <dependency>
             <groupId>org.glassfish.jersey.core</groupId>
             <artifactId>jersey-client</artifactId>
-            <version>2.17</version>
+            <version>${jersey.version}</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.glassfish.jersey.media</groupId>
-            <artifactId>jersey-media-json-processing</artifactId>
-            <version>2.18</version>
-        </dependency>-->
-
+            <artifactId>jersey-media-json-jackson</artifactId>
+            <version>${jersey.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.media</groupId>
+            <artifactId>jersey-media-jaxb</artifactId>
+            <version>${jersey.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.pierceecom.sample</groupId>
+            <artifactId>api</artifactId>
+            <version>local</version>
+        </dependency>
     </dependencies>
 </project>
